input token alignment fix, hero font size adjustment

--- a/packages/client/src/components/add-liquidity/add-liquidity-v3.scss
+++ b/packages/client/src/components/add-liquidity/add-liquidity-v3.scss
@@ -280,6 +280,7 @@
     .token-with-balance {
         // border: 1px solid var(--borderDefault);
         padding: 0rem 1rem;
+        flex-grow: 1;
         // border-radius: 4px;
         .token-logo {
             display: inline-flex;
